[gd_scene load_steps=27 format=3 uid="uid://c433rrcmug7u6"]

[ext_resource type="Texture2D" uid="uid://ct8fsyxbai0wl" path="res://Sprites/Eel.png" id="1_j7ru2"]
[ext_resource type="Script" path="res://Scenes/boss_battle.gd" id="1_olm5e"]
[ext_resource type="Texture2D" uid="uid://bc1gq4psvelvc" path="res://Sprites/eel zap.png" id="3_mgbme"]
[ext_resource type="AudioStream" uid="uid://xxwfus1sqdvu" path="res://Sounds/bzz.wav" id="4_jgf3b"]
[ext_resource type="AudioStream" uid="uid://d0ap8rwdcaooj" path="res://Sounds/bzz4.wav" id="5_huaq3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pj2ud"]
atlas = ExtResource("1_j7ru2")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksogk"]
atlas = ExtResource("1_j7ru2")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_65tfa"]
atlas = ExtResource("1_j7ru2")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwas0"]
atlas = ExtResource("1_j7ru2")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2baby"]
atlas = ExtResource("1_j7ru2")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_87q1i"]
atlas = ExtResource("1_j7ru2")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbprg"]
atlas = ExtResource("1_j7ru2")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_13wkc"]
atlas = ExtResource("1_j7ru2")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g31g"]
atlas = ExtResource("1_j7ru2")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6uf7"]
atlas = ExtResource("1_j7ru2")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbu2n"]
atlas = ExtResource("1_j7ru2")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_785oj"]
atlas = ExtResource("1_j7ru2")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojurl"]
atlas = ExtResource("1_j7ru2")
region = Rect2(768, 512, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_yrho3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj2ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksogk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65tfa")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwas0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwas0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwas0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwas0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwas0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwas0")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2baby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87q1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbprg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13wkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g31g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6uf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbu2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_785oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojurl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_785oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbu2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6uf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g31g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13wkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbprg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87q1i")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bdg4y"]
atlas = ExtResource("3_mgbme")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo0b1"]
atlas = ExtResource("3_mgbme")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_foaf6"]
atlas = ExtResource("3_mgbme")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlb0c"]
atlas = ExtResource("3_mgbme")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvnpo"]
atlas = ExtResource("3_mgbme")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq8co"]
atlas = ExtResource("3_mgbme")
region = Rect2(128, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_viba6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdg4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo0b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_foaf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlb0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvnpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq8co")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}]

[node name="BossBattle" type="Node2D"]
script = ExtResource("1_olm5e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_yrho3")
animation = &"move"
autoplay = "move"

[node name="AttackSprite" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-292, 57)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_viba6")
frame = 5
frame_progress = 1.0
flip_h = true

[node name="ShockTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="BeamRemove" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SFXEelAttack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jgf3b")

[node name="SFXEelAttackBeam" type="AudioStreamPlayer2D" parent="."]

[node name="SFXEelAttackBeamLand" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_huaq3")

[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="timeout" from="ShockTimer" to="." method="_on_shock_timer_timeout"]
[connection signal="timeout" from="AttackDelay" to="." method="_on_attack_delay_timeout"]
[connection signal="timeout" from="BeamRemove" to="." method="_on_beam_remove_timeout"]
